feat: OpenAPI/Swagger + Rate Limiting + CORS 환경변수 설정
- springdoc-openapi-starter-webmvc-ui 추가
- OpenAPI 설정 및 주요 컨트롤러에 @Tag, @Operation 어노테이션 추가
- Swagger UI: /swagger-ui.html, API Docs: /v3/api-docs
- IP 기반 Rate Limiting 구현 (로그인: 10회/분, API: 100회/분)
- CORS allowedOrigins를 환경변수로 설정 가능 (기본값: https://breaddesk.k6s.app)
- SecurityConfig에 Swagger 경로 permitAll 추가